Added page content check for translation

--- a/resources/canary/data/locales/en.json
+++ b/resources/canary/data/locales/en.json
@@ -25,5 +25,7 @@
 	"Bans": "Bans",
 	"Logout": "Logout",
 	"Profile": "Profile",
-	"Statistics": "Statistics"
+	"Statistics": "Statistics",
+	"Max Players Account": "Max Players Account",
+	"Level Guild": "Level Guild"
 }
