--- a/resources/canary/data/locales/pt.json
+++ b/resources/canary/data/locales/pt.json
@@ -25,5 +25,7 @@
 	"Bans": "Banimentos",
 	"Logout": "Deslogar",
 	"Profile": "Perfil",
-	"Statistics": "Estatisticas"
+	"Statistics": "Estatisticas",
+	"Max Players Account": "Máximo de Players na Account",
+	"Level Guild": "Level Guild"
 }
