Improvements and Fixes
Added last kills page
Session improvements
Added box to accept cookies (GDPR - General Data Protection Regulation)
Removed market page in admin panel
Improvements to the bans page in the admin panel
Added signature (localhost/signature/{player_id}
Added banned account system
Payment system redirection fixes
Redirection fix if user has no role
Online character page fixes
Added button with discord link
Page cache fix
Created themebox separation

--- a/resources/canary/data/locales/en.json
+++ b/resources/canary/data/locales/en.json
@@ -4,6 +4,7 @@
 	"Settings": "Settings",
 	"Website": "Website",
 	"Samples": "Samples",
+	"Upload": "Upload",
 	"Worlds": "Worlds",
 	"Publications": "Publications",
 	"View": "View",
@@ -17,15 +18,27 @@
 	"Achievements": "Achievements",
 	"Community": "Community",
 	"Accounts": "Accounts",
+	"Account": "Account",
 	"Players": "Players",
 	"Houses": "Houses",
 	"Guilds": "Guilds",
 	"Groups": "Grupos",
 	"Market Offers": "Market Offers",
-	"Bans": "Bans",
+	"Banishments": "Banishments",
 	"Logout": "Logout",
 	"Profile": "Profile",
 	"Statistics": "Statistics",
 	"Max Players Account": "Max Players Account",
-	"Level Guild": "Level Guild"
+	"Level Guild": "Level Guild",
+	"Reason": "Reason",
+	"Close": "Close",
+	"Start": "Start",
+	"End": "End",
+	"By": "By",
+	"Reference": "Reference",
+	"Method": "Method",
+	"Date": "Date",
+	"Action": "Action",
+	"Vocation": "Vocation",
+	"Title": "Title"
 }
