--- a/resources/canary/data/locales/pt.json
+++ b/resources/canary/data/locales/pt.json
@@ -4,28 +4,41 @@
 	"Settings": "Configurações",
 	"Website": "Website",
 	"Samples": "Samples",
+	"Upload": "Envios",
 	"Worlds": "Mundos",
 	"Publications": "Publicações",
-	"View": "View",
-	"News": "News",
-	"Newsticker": "Newsticker",
+	"View": "Ver",
+	"News": "Notícias",
+	"Newsticker": "Notícia Rápida",
 	"Featured Article": "Featured Article",
 	"Compendium": "Compendium",
 	"New": "Novo",
-	"Library": "Library",
+	"Library": "Biblioteca",
 	"Creatures": "Criaturas",
 	"Achievements": "Achievements",
 	"Community": "Comunidade",
 	"Accounts": "Contas",
+	"Account": "Conta",
 	"Players": "Personagens",
 	"Houses": "Casas",
 	"Guilds": "Guilds",
 	"Groups": "Grupos",
 	"Market Offers": "Ofertas do Mercado",
-	"Bans": "Banimentos",
+	"Banishments": "Banimentos",
 	"Logout": "Deslogar",
 	"Profile": "Perfil",
 	"Statistics": "Estatisticas",
 	"Max Players Account": "Máximo de Players na Account",
-	"Level Guild": "Level Guild"
+	"Level Guild": "Level Guild",
+	"Reason": "Razão",
+	"Close": "Fechar",
+	"Start": "Início",
+	"End": "Final",
+	"By": "Por",
+	"Reference": "Referência",
+	"Method": "Método",
+	"Date": "Data",
+	"Action": "Ações",
+	"Vocation": "Vocação",
+	"Title": "Título"
 }
